clutter/clutter-deprecated.h
@@ -23,6 +23,7 @@
 #include "deprecated/clutter-fixed.h"
 #include "deprecated/clutter-frame-source.h"
 #include "deprecated/clutter-group.h"
+#include "deprecated/clutter-input-device.h"
 #include "deprecated/clutter-keysyms.h"
 #include "deprecated/clutter-main.h"
 #include "deprecated/clutter-media.h"
