clutter/clutter-main.c
@@ -2420,9 +2420,7 @@ _clutter_process_event_details (ClutterActor        *stage,
                                 ClutterMainContext  *context,
                                 ClutterEvent        *event)
 {
-  ClutterInputDevice *device = NULL;
-
-  device = clutter_event_get_device (event);
+  ClutterInputDevice *device = clutter_event_get_device (event);
 
   switch (event->type)
     {
@@ -2463,7 +2461,7 @@ _clutter_process_event_details (ClutterActor        *stage,
 
             emit_pointer_event (event, device);
 
-            actor = _clutter_input_device_update (device, FALSE);
+            actor = _clutter_input_device_update (device, NULL, FALSE);
             if (actor != stage)
               {
                 ClutterEvent *crossing;
@@ -2597,7 +2595,7 @@ _clutter_process_event_details (ClutterActor        *stage,
                * get the actor underneath
                */
               if (device != NULL)
-                actor = _clutter_input_device_update (device, TRUE);
+                actor = _clutter_input_device_update (device, NULL, TRUE);
               else
                 {
                   CLUTTER_NOTE (EVENT, "No device found: picking");
@@ -2640,7 +2638,14 @@ _clutter_process_event_details (ClutterActor        *stage,
       case CLUTTER_TOUCH_END:
         {
           ClutterActor *actor;
+          ClutterEventSequence *sequence;
           gfloat x, y;
+
+          sequence =
+            clutter_event_get_event_sequence (event);
+
+          if (event->type == CLUTTER_TOUCH_BEGIN)
+            _clutter_input_device_add_sequence (device, sequence);
 
           clutter_event_get_coords (event, &x, &y);
 
@@ -2649,9 +2654,13 @@ _clutter_process_event_details (ClutterActor        *stage,
            */
           if (event->any.source == NULL)
             {
-              actor = _clutter_stage_do_pick (CLUTTER_STAGE (stage),
-                                              x, y,
-                                              CLUTTER_PICK_REACTIVE);
+              if (device != NULL)
+                actor = _clutter_input_device_update (device, sequence, TRUE);
+              else
+                actor = _clutter_stage_do_pick (CLUTTER_STAGE (stage),
+                                                x, y,
+                                                CLUTTER_PICK_REACTIVE);
+
               if (actor == NULL)
                 break;
 
@@ -2669,6 +2678,10 @@ _clutter_process_event_details (ClutterActor        *stage,
                         actor);
 
           emit_touch_event (event, device);
+
+          if (event->type == CLUTTER_TOUCH_END)
+            _clutter_input_device_remove_sequence (device, sequence);
+
           break;
         }
 
